src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
}

ul, li {
  margin: 0;
  padding: 0;
}

.clearfix:before,
.clearfix:after {
  content: " ";
  display: table;
}
.clearfix:after {
  clear: both;
}

.App {
  padding-top: 70px;
}

.OffsetPageAnchor {
  position: relative;
  top: -70px;
  display: block;
  visibility: hidden;
}

